--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,45 @@
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Cinzel&display=swap');
+
+/* font-family: 'Amatic SC', cursive;
+font-family: 'Cinzel', serif; */ 
+
+body {
+    background: #68c0d9;
+}
+
+header {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.game-name {
+    font-family: 'Amatic SC', cursive, sans-serif;
+    font-size: 50px;
+    color: bisque;
+    text-align: center;
+    transition: color 0.8s;
+    transition: transform 0.8s;
+    border-bottom: 3px solid #68c0d9;
+    padding-bottom: .25em;
+    text-decoration: none;
+}
+
+.game-name:hover {
+    color: bisque;
+    transform: scale(1.5);
+    background-color: #68c0d9;
+    background-size: 10%;
+    border-bottom: 0;
+    padding-bottom: .3em;
+    text-decoration: none;
+
+
+}
+
 canvas {
-    border: 2px solid black;
-    box-shadow: black 10px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    
 }
