--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,6 +21,7 @@ header {
 
 a {
     text-decoration: none;
+    color: bisque;
 }
 
 #underworld-bg {
@@ -63,7 +64,7 @@ a {
 }
 
 .socials a:hover {
-    color: bisque;
+    color: rgb(233, 135, 16);
 }
 
 .arrow-keys {
