--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,6 +22,14 @@ a {
     color: bisque;
 }
 
+#scores {
+    font-size: 30px;
+}
+#game-status {
+    font-size: 35px;
+    font-weight: bold;
+    text-align: center;
+}
 .main-game-area {
     margin: 0px;
     padding: 0px;
