--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,13 +7,23 @@ html {
 }
 
 
-body {
-    
-    background-image: url('assets/images/underworld.jpg');
-    background: darkslategray;
+body, html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+
+.bg{
+    background-image: url('/assets/images/underworld.jpg');
+    background-color: darkslategray;
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
 
+    height: 100%;
+    overflow: hidden;
 }
 
 
@@ -23,13 +33,28 @@ a {
 }
 
 #scores {
+    color: bisque;
     font-size: 30px;
+    
 }
 #game-status {
     font-size: 35px;
     font-weight: bold;
     text-align: center;
 }
+.game-name {
+    margin-top: 0px;
+    padding-top: 1rem;
+    font-size: 50px;
+    color: bisque;
+    text-align: center;
+    text-decoration: none;
+}
+
+.game-status{
+    color: white;
+}
+
 .main-game-area {
     margin: 0px;
     padding: 0px;
@@ -37,16 +62,27 @@ a {
     justify-content: center;
     align-items: center;
 }
-
-.game-name {
-    
-    font-size: 50px;
-    color: bisque;
-    text-align: center;
-    text-decoration: none;
+#underworld-bg {
+    position: relative;
+    margin-left: 190px;
 }
 
+#controls-for-user{
+    display: none;
+}
+
+.socials {
+    position: absolute;
+    margin-bottom: 10px;
+    right: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: flex-end;
+}
 .socials a {
+    
     font-size: 2rem;
 }
 
@@ -58,4 +94,36 @@ a {
     font-size: 10px;
 }
 
+@media only screen and (max-width: 1024px) and (min-height: 650px) {
+    .game-name{
+        padding: 0;
+        margin: 0px;
+    }
+    .main-game-area{
+        flex-direction: column;
+    }
+    #underworld-bg{
+        margin:0;
+    }
 
+    #scores{
+        display: flex;
+    }
+    
+    #scores > h2{
+        padding: 1rem;
+        margin:0px;
+    }
+}
+
+@media only screen and (max-height: 658px) and (max-width: 1024px){
+
+}
+
+@media only screen and (max-width: 560px) {
+
+    #scores > h2{
+        font-size: 2rem;
+    }
+
+}
