--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,14 +116,22 @@ a {
     }
 }
 
-@media only screen and (max-height: 658px) and (max-width: 1024px){
-
-}
-
 @media only screen and (max-width: 560px) {
-
     #scores > h2{
         font-size: 2rem;
     }
+}
 
+@media only screen and (max-width: 450px) {
+
+    .socials a {
+        font-size: 1.5rem;
+    }
+}
+
+@media only screen and (max-width: 285px) {
+
+    #scores > h2{
+        font-size: 1.5rem;
+    }
 }
