--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -130,6 +130,10 @@ a {
   font-size: 10px;
 }
 
+#joyDiv{
+    display: none;
+}
+
 .order-1 { order: 1; }
 .order-2 { order: 2; }
 .order-3 { order: 3; }
@@ -165,9 +169,9 @@ a {
       padding: 2rem;
   }
 
-.order-1 { order: 2; }
-.order-2 { order: 1; }
-.order-3 { order: 3; }
+.order-1 { order: 3; }
+.order-2 { order: 2; }
+.order-3 { order: 1; }
 }
 
 @media only screen and (max-width: 560px) {
