--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,11 +31,11 @@ html {
 
 a {
   text-decoration: none;
-  color: bisque;
+  color: rgba(255,255,255,1 );
 }
 
 #scores {
-  color: bisque;
+  color: rgba(255,255,255,1 );
   font-size: 1.3em;
   writing-mode: vertical-rl;
 }
@@ -59,13 +59,9 @@ a {
   margin-top: 0px;
   padding-top: 1rem;
   font-size: 50px;
-  color: bisque;
+  color: rgba(255,255,255,1 );
   text-align: center;
   text-decoration: none;
-}
-
-.game-status {
-  color: white;
 }
 
 .main-game-area {
@@ -86,7 +82,7 @@ a {
   border-radius: 999px;
   box-shadow: #5E5DF0 0 10px 20px -10px;
   box-sizing: border-box;
-  color: #FFFFFF;
+  color: rgba(255,255,255,1 );
   cursor: pointer;
   font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
   font-size: 16px;
@@ -101,7 +97,7 @@ a {
   width: fit-content;
   word-break: break-word;
   border: 0;
-  /* margin-left: 40px; */
+  margin-left: -15px;
   transform: rotate(-90deg);
 }
 
@@ -109,31 +105,16 @@ a {
   cursor: url('../images/curson_btn_pa2_icon.ico'), auto;
 }
 
-#controls-for-user {
-  display: none;
-}
-
 .socials {
-  position: absolute;
-  margin-bottom: 10px;
-  right: 0;
+  margin: 0 auto;
   display: flex;
+  justify-content: center;
   align-items: center;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-content: flex-end;
 }
 .socials a {
   font-size: 2rem;
-}
-
-.socials a:hover {
-  color: rgb(233, 135, 16);
-}
-
-.arrow-keys {
-  font-size: 10px;
-}
+  padding: 0.5rem 1.25rem;
+} 
 
 #joyDiv{
     display: none;
