--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,10 +12,11 @@ html {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  cursor: url('../images/curson_btn_pa2_icon.ico'), auto;
+  cursor: url("../images/curson_btn_pa2_icon.ico"), auto;
 }
 
-.bg {
+.bg,
+.main-menu {
   background-image: url("../images/underworld.jpg");
   background-color: darkslategray;
   background-position: center;
@@ -24,30 +25,33 @@ html {
   -o-background-size: cover;
   -moz-background-size: cover;
   -webkit-background-size: cover;
-
   height: 100%;
   overflow: hidden;
 }
 
+.bg {
+  display: none;
+}
+
 a {
   text-decoration: none;
-  color: rgba(255,255,255,1 );
+  color: rgba(255, 255, 255, 1);
 }
 
 #scores {
-  color: rgba(255,255,255,1 );
+  color: rgba(255, 255, 255, 1);
   font-size: 1.3em;
   writing-mode: vertical-rl;
 }
 
 #scores > h2 {
-    display: inline-block;
-    padding: 1rem;
-    margin: 0px;
+  display: inline-block;
+  padding: 1rem;
+  margin: 0px;
 }
 
 #scores > h2 > span {
-    writing-mode: horizontal-tb;
+  writing-mode: horizontal-tb;
 }
 
 #game-status {
@@ -59,7 +63,7 @@ a {
   margin-top: 0px;
   padding-top: 1rem;
   font-size: 50px;
-  color: rgba(255,255,255,1 );
+  color: rgba(255, 255, 255, 1);
   text-align: center;
   text-decoration: none;
 }
@@ -78,13 +82,16 @@ a {
 
 /* CSS example from https://getcssscan.com/css-buttons-examples*/
 .button-34 {
-  background: #5E5DF0;
+  background: #5e5df0;
   border-radius: 999px;
-  box-shadow: #5E5DF0 0 10px 20px -10px;
+  box-shadow: #5e5df0 0 10px 20px -10px;
   box-sizing: border-box;
-  color: rgba(255,255,255,1 );
+  color: rgba(255, 255, 255, 1);
   cursor: pointer;
-  font-family: Inter,Helvetica,"Apple Color Emoji","Segoe UI Emoji",NotoColorEmoji,"Noto Color Emoji","Segoe UI Symbol","Android Emoji",EmojiSymbols,-apple-system,system-ui,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans",sans-serif;
+  font-family: Inter, Helvetica, "Apple Color Emoji", "Segoe UI Emoji",
+    NotoColorEmoji, "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji",
+    EmojiSymbols, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue",
+    "Noto Sans", sans-serif;
   font-size: 16px;
   font-weight: 700;
   line-height: 24px;
@@ -102,7 +109,7 @@ a {
 }
 
 .button-34:hover {
-  cursor: url('../images/curson_btn_pa2_icon.ico'), auto;
+  cursor: url("../images/curson_btn_pa2_icon.ico"), auto;
 }
 
 .socials {
@@ -114,15 +121,21 @@ a {
 .socials a {
   font-size: 2rem;
   padding: 0.5rem 1.25rem;
-} 
-
-#joyDiv{
-    display: none;
 }
 
-.order-1 { order: 1; }
-.order-2 { order: 2; }
-.order-3 { order: 3; }
+#joyDiv {
+  display: none;
+}
+
+.order-1 {
+  order: 1;
+}
+.order-2 {
+  order: 2;
+}
+.order-3 {
+  order: 3;
+}
 
 @media only screen and (max-width: 1024px) and (min-height: 650px) {
   .game-name {
@@ -146,18 +159,24 @@ a {
     margin: 0px;
   }
 
-  .button-34{
-      transform: rotate(0deg);
-      margin: 0px;
+  .button-34 {
+    transform: rotate(0deg);
+    margin: 0px;
   }
 
-  .button-wrap{
-      padding: 1rem;
+  .button-wrap {
+    padding: 1rem;
   }
 
-.order-1 { order: 3; }
-.order-2 { order: 2; }
-.order-3 { order: 1; }
+  .order-1 {
+    order: 3;
+  }
+  .order-2 {
+    order: 2;
+  }
+  .order-3 {
+    order: 1;
+  }
 }
 
 @media only screen and (max-width: 560px) {
@@ -172,7 +191,7 @@ a {
   }
   .socials a {
     font-size: 1.5rem;
-    padding: .25rem 1rem;
+    padding: 0.25rem 1rem;
   }
 
   #scores > h2 {
@@ -180,8 +199,8 @@ a {
     padding: 0.25rem 1rem;
   }
 
-  .button-wrap{
-      padding: .5rem;
+  .button-wrap {
+    padding: 0.5rem;
   }
 }
 
