added Intro input from the user, and also added rules divs using JS to update current HTML

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,11 +26,11 @@ html {
   -moz-background-size: cover;
   -webkit-background-size: cover;
   height: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .bg {
-  display: none;
+  display: block;
 }
 
 a {
@@ -105,7 +105,12 @@ a {
   word-break: break-word;
   border: 0;
   margin-left: -15px;
+}
+
+
+#restart{
   transform: rotate(-90deg);
+
 }
 
 .button-34:hover {
