--- a/assets/css/mainMenu.css
+++ b/assets/css/mainMenu.css
@@ -1,4 +1,12 @@
-.hades-intro {
+.main-menu {
+  display: block;
+}
+
+#rules-screen {
+  display: none;
+}
+
+.hades-intro, .hades-rules {
   position: absolute;
   z-index: 2;
   left: 18%;
@@ -9,23 +17,18 @@
   animation-timing-function: ease-in-out;
 }
 
-@keyframes floating {
-  0% {
-    transform: translate(0, 0px);
-  }
-  50% {
-    transform: translate(0, 15px);
-  }
-  100% {
-    transform: translate(0, -0px);
-  }
+.error {
+  display: none;
 }
+
+
 
 .dialogue {
   text-align: center;
   position: relative;
   width: 100%;
   height: 100%;
+  
 }
 
 #text {
@@ -45,9 +48,8 @@
   text-align: center;
   width: 400px;
   word-break: break-word;
-  height: 120px;
   border-radius: 10px;
-  padding: 0px;
+  padding: 10px;
   left: 45%;
   top: 15%;
   z-index: 5;
@@ -56,6 +58,7 @@
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
 }
+
 .bubble:after {
   content: "";
   position: absolute;
@@ -70,3 +73,46 @@
   margin-left: -20px;
 }
 
+.menu-buttons {
+  position: absolute;
+  top: 30%;
+  left: 52%;
+  z-index: 8;
+}
+
+.menu-buttons button{
+  display: block;
+  margin-bottom: 2rem;
+  animation-name: floating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+}
+
+#understand-start-game {
+  position: absolute;
+  top: 45%;
+  left: 49%;
+  animation-name: floating;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  visibility: hidden;
+}
+
+#hades-menu{
+  visibility: hidden;
+}
+
+
+@keyframes floating {
+  0% {
+    transform: translate(0, 0px);
+  }
+  50% {
+    transform: translate(0, 15px);
+  }
+  100% {
+    transform: translate(0, -0px);
+  }
+}
