--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,10 +61,8 @@ a {
 }
 
 #restart{
-  /* transform: rotate(-90deg); */
-  height: 220px;
-  width: 20px;
-  margin: 10px;
+  transform: rotate(-90deg);
+
 }
 
 
