--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,7 @@ html {
   padding: 0;
   overflow: hidden;
   cursor: url("../images/curson_btn_pa2_icon.ico"), auto;
+  position: relative;
 }
 
 .bg,
